Change title and heading in index.html
Updated the title and heading to reflect new branding.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mon Serveur Discord</title>
+    <title>Mon Discord</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -25,9 +25,9 @@
     </style>
 </head>
 <body>
-    <h1>Rejoins mon serveur Discord !</h1>
-    <a href="https://discord.gg/TonLienDiscord" class="discord-link" target="_blank">
-        Clique ici pour rejoindre
+    <h1> usrx.cnn </h1>
+    <a href=discord.Com class="discord-link" target="_blank">
+        usrx.c
     </a>
 </body>
 </html>
