--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <body>
     <h1> usrx.cnn </h1>
     <a href=discord.Com class="discord-link" target="_blank">
-        usrx.c
+        usrx.cnn
     </a>
 </body>
 </html>
