Change header text from 'usrx.cnn' to 'Mon Discord ;)'

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </style>
 </head>
 <body>
-    <h1> usrx.cnn </h1>
+    <h1> Mon Discord ;) </h1>
     <a href=discord.Com class="discord-link" target="_blank">
         usrx.cnn
     </a>
