Fix link to Discord in index.html

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 </head>
 <body>
     <h1> Mon Discord ;) </h1>
-    <a href=discord.Com class="discord-link" target="_blank">
+    <a href="discord.Com" class="discord-link" target="_blank">
         usrx.cnn
     </a>
 </body>
